fixing gaps

--- a/src/components/port.css
+++ b/src/components/port.css
@@ -45,7 +45,7 @@
   100% { background-position: 0% 50%; }
 }
 
-/* Header */
+
 .header {
   text-align: center;
   padding: 20px;
@@ -64,7 +64,7 @@
 
 .social-icons a {
   color: #333;
-  margin: 0 10px;
+  margin: 0 12px;
   font-size: 1.5em;
 }
 
@@ -80,10 +80,10 @@
 }
 
 .contact-button:hover {
-  background-color: #d4004d;
+  background-color: #5f5f5f;
 }
 
-/* Sidebar */
+
 .app-container2 {
   display: flex;
   flex-direction: column;
@@ -115,7 +115,7 @@
   margin: 5px 0;
 }
 
-/* Project Cards */
+
 .card {
   margin-top: 20px;
   background-color: #282c34;
